# career-analyst-kb

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: INDEX.md  api-reference.md  architecture-solid.md  architecture.md  db-schema.sql  design-career-analyst-kb.md  features-and-deployment.md  rag-deep-dive.md  rag-intro.md  request-flow.md
e2e/: interview_flow.spec.ts  package-lock.json  package.json  playwright.config.ts  resume_flow.spec.ts
eval/: golden_dataset.jsonl  latency_bench.py  rag_eval.py  routing_eval.py  sft_seeds.jsonl
eval/finetune/: finetune_qwen3_30b.py
eval/results/: latency_bench_20260424_145012.json  rag_eval_20260424_143627.json  rag_eval_20260424_211321.json  routing_eval_20260424_143945.json  routing_eval_20260424_144053.json
frontend/: admin.html  index.html
migrations/: env.py
models/: Modelfile.qwen3-30b
scripts/: audit_subtitles.py  build_sft_dataset.py  create_sample_data.py  generate_qa_dataset.py  ingest_documents.py  ingest_youtube.py  reset_knowledge_base.py  setup_qwen3_model.sh  vtt_to_text.py  whisper_fallback.py
services/kb-api/: Dockerfile  README.md
services/voltagent-career/: .env.example  Dockerfile  README.md  package-lock.json  package.json
src/api/: dependencies.py  main.py
src/core/: config.py  exceptions.py  llm_factory.py
src/finetuning/: glossary.py  prompt_optimizer.py  qa_generator.py
src/infrastructure/: __init__.py
src/ingestion/: __init__.py  career_chunker.py  career_classifier.py  chunker.py  embedder.py  pdf_parser.py
src/rag/: __init__.py  hybrid_search.py  pipeline.py  retriever.py
src/security/: __init__.py  content_filter.py  guardrail.py  injection_detector.py
tests/unit/: test_chunker.py  test_content_filter.py
(+115 files in other folders)
