[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-kb"
version = "1.0.0"
description = "職涯分析師知識庫系統 — Career Analyst Knowledge Base"
requires-python = ">=3.11"

dependencies = [
  # Core Framework
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.12",

  # LLM & RAG
  "langchain==0.3.10",
  "langchain-ollama==0.2.3",        # Ollama: ChatOllama + OllamaEmbeddings
  "langchain-openai==0.2.11",       # OpenAI compat (Grok 也使用此套件)
  "langchain-community==0.3.10",
  "llama-index>=0.12.0,<0.13.0",
  "llama-index-vector-stores-milvus>=0.3.1,<0.4.0",
  "openai==1.57.0",                 # Grok OpenAI-compat client
  "tiktoken==0.8.0",

  # Vector & Search
  "pymilvus==2.4.9",
  "rank-bm25==0.2.2",
  "sentence-transformers==3.3.1",

  # Document Processing
  "pypdf==5.1.0",
  "pdfplumber==0.11.4",
  "unstructured[pdf,docx,pptx]>=0.16.19,<0.17.0",
  "python-docx==1.1.2",
  "pytesseract==0.3.13",
  "Pillow==11.0.0",

  # Database
  "sqlalchemy==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "psycopg2-binary==2.9.10",

  # Security
  "presidio-analyzer==2.2.355",
  "presidio-anonymizer==2.2.355",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt>=3.2.0,<4.0.0",
  "slowapi==0.1.9",

  # Observability
  "loguru==0.7.3",
  "prometheus-fastapi-instrumentator==7.0.0",

  # Dev
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
